--- a/iterative_pruning.ipynb
+++ b/iterative_pruning.ipynb
@@ -62,29 +62,18 @@
     "    \"\"\"\n",
     "    loss_cutoff = len(train_loader) // 10\n",
     "    optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
-    "\n",
-    "    accuracy_metric = MulticlassAccuracy(\n",
-    "        num_classes=4, \n",
-    "        average=\"micro\"  # total correct / total\n",
-    "        )\n",
-    "\n",
+    "    accuracy_metric = MulticlassAccuracy(num_classes=4, average=\"micro\")\n",
     "    best_val_accuracy = 0.0\n",
-    "\n",
     "    scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer,\n",
     "                                                            mode='min', \n",
     "                                                            factor=0.1, # like in Hannun et al.\n",
     "                                                            patience=2 # 2 in Hannun et al. \"two consecutive epochs\"\n",
-    "                                                            )\n",
-    "                                                    \n",
+    "                                                            )                                           \n",
     "    for epoch in range(epochs):\n",
-    "\n",
-    "        # Training stage, where we want to update the parameters.\n",
     "        model.train()  # Set the model to training mode\n",
-    "\n",
     "        training_loss = []\n",
     "        validation_loss = []\n",
     "        accuracy_metric.reset()\n",
-    "\n",
     "        # Create a progress bar for the training loop.\n",
     "        training_loop = create_tqdm_bar(train_loader, desc=f'Training Epoch [{epoch + 1}/{epochs}]')\n",
     "        for train_iteration, batch in training_loop:\n",
@@ -96,23 +85,17 @@
     "            loss = loss_func(logits, labels) # Compute the loss over the predictions and the ground truth.\n",
     "            loss.backward()  # Stage 2: Backward().\n",
     "            optimizer.step() # Stage 3: Update the parameters.\n",
-    "            # scheduler.step() # Update the learning rate.\n",
     "            \n",
-    "                \n",
     "            preds = torch.argmax(logits, dim=1)  # (B, S)\n",
-    "\n",
     "            accuracy_metric.update(preds, targets)\n",
-    "                \n",
     "            current_train_accuracy = accuracy_metric.compute.item()\n",
     "            training_loss.append(loss.item())\n",
     "            training_loss = training_loss[-loss_cutoff:]\n",
-    "\n",
     "            # Update the progress bar.\n",
     "            training_loop.set_postfix(curr_train_loss = \"{:.8f}\".format(np.mean(training_loss)),\n",
     "                                      curr_train_accuracy=f\"{current_train_accuracy:.4f}\",\n",
     "                                      lr = \"{:.8f}\".format(optimizer.param_groups[0]['lr'])\n",
     "                                      )\n",
-    "\n",
     "            # Update the tensorboard logger.\n",
     "            #tb_logger.add_scalar(f'classifier_{name}/train_loss', loss.item(), epoch * len(train_loader) + train_iteration)\n",
     "\n",
@@ -150,7 +133,7 @@
     "        # Si le F1 dépasse 82.6% (0.826), on considère que le ticket a convergé avec une tolérance de 1%\n",
     "        # par rapport au 83.6% de l'article\n",
     "        if best_val_accuracy >= 0.826:\n",
-    "            print(f\"\\n[Early Stopping] F1 Val ({cinc_f1:.4f}) >= 0.826. Fin de l'entraînement pour cette étape LTH.\")\n",
+    "            print(f\"\\n[Early Stopping] F1 Val ({best_val_accuracy:.4f}) >= 0.826. Fin de l'entraînement pour cette étape LTH.\")\n",
     "            break\n",
     "    \n",
     "    return model, best_val_accuracy\n"
@@ -202,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9867af38",
    "metadata": {},
    "outputs": [],
@@ -247,25 +230,7 @@
     "\n",
     "    @property\n",
     "    def prunable_layer_names(self):\n",
-    "        return self.model.prunable_layer_names\n",
-    "\n",
-    "    # @property\n",
-    "    # def output_layer_names(self):\n",
-    "    #     return self.model.output_layer_names\n",
-    "\n",
-    "    # @property\n",
-    "    # def loss_criterion(self):\n",
-    "    #     return self.model.loss_criterion\n",
-    "\n",
-    "    # def save(self, save_location, save_step):\n",
-    "    #     self.model.save(save_location, save_step)\n",
-    "\n",
-    "    # @staticmethod\n",
-    "    # def default_hparams(): raise NotImplementedError()\n",
-    "    # @staticmethod\n",
-    "    # def is_valid_model_name(model_name): raise NotImplementedError()\n",
-    "    # @staticmethod\n",
-    "    # def get_model_from_name(model_name, outputs, initializer): raise NotImplementedError()\n"
+    "        return self.model.prunable_layer_names\n"
    ]
   },
   {
@@ -316,8 +281,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\n",
     "def iterative_pruning(pruning_params, network, train_loader, val_loader, loss_func, resume=False) : \n",
     "    \n",
@@ -376,15 +339,13 @@
     "        print(\"model sparcity (percentage of weight that has been pruned): \", current_mask.sparsity )  \n",
     "        \n",
     "        # Train the DL network with the given data x.\n",
-    "        D,final_accuracy = train_model(D, train_loader, val_loader, loss_func, name = \"lth_ecg\", prior = prior, epochs=20,tb_logger=None)\n",
+    "        D,final_accuracy = train_model(D, train_loader, val_loader, loss_func, name = \"lth_ecg\", prior = prior, epochs=20)\n",
     "\n",
     "        # 3. Archivage\n",
     "        history_theta.append(initial_weights_number/remaining_weights_number)\n",
     "        #history_acc.append(final_accuracy)\n",
     "        history_sparsity.append(current_mask.sparsity)\n",
     "\n",
-    "        \n",
-    "                \n",
     "        if isinstance(D, PrunedModel):\n",
     "            model_to_prune = D.model\n",
     "        else:\n",
@@ -421,8 +382,9 @@
     "\n",
     "        # Plots and push of checkpoints on github every 5 steps \n",
     "        if step % 5 == 0:\n",
-    "            plot_lth_progress(history_theta, history_acc)\n",
-    "            plot_layerwise_remaining_params(D_sparse, current_mask)\n",
+    "            path = f'plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}/'\n",
+    "            plot_lth_progress(history_theta, history_acc, path)\n",
+    "            plot_layerwise_remaining_params(D_sparse, current_mask, path)\n",
     "            push_checkpoint_to_git(\n",
     "                    filepaths=[checkpoint_file,\n",
     "                    f\"plots/iterative_pruning_weight_rewinding_{str(pruning_params['weight_rewinding'])}_performance_plot.png\",\n",
